--- a/second/styles2.css
+++ b/second/styles2.css
@@ -94,10 +94,12 @@ body {
   align-items: center;
   text-align: left;
   padding: 2px 20px;
-  background: #da1402;
+  background: radial-gradient(circle, rgb(220, 42, 2), rgb(127, 1, 1));
   color: white;
   border-top-right-radius: 10px;
   border-top-left-radius: 10px;
+  border-bottom-right-radius: 10px;
+  border-bottom-left-radius: 10px;
   font-family: Bahnschrift SemiBold !important;
 }
 .header {
@@ -169,13 +171,18 @@ body {
       max-width: 90%;
       height: auto;
       border-radius: 10px;
-      border: 2px solid #ff0000;
+      border: 1px solid #00000082;
+      box-shadow: 0 6px 12px rgba(0, 0, 0, 0.5);
+      
     }
     
     .image-box p {
       margin-top: 0px;
       font-size: 1rem;
-      color: #010000;
+      background: radial-gradient(circle, rgb(8, 0, 0), rgb(253, 4, 4));
+      -webkit-background-clip: text;
+      background-clip: text;
+      color: transparent;
       font-weight: bold;
       display: flex; /* To align the heart logo and text horizontally */
       align-items: center; /* Vertically center items */
@@ -185,9 +192,10 @@ body {
     }
 
     .heart-logo {
-      width: 25px; /* Adjust size as needed */
+      width: 23px; /* Adjust size as needed */
       display: inline-block; /* Ensure it stays inline */
       border: 0px solid #ff000000 !important;
+      box-shadow: 0 6px 12px rgba(0, 0, 0, 0)!important;
     }
 
     .heart-logo:hover {
