--- a/styles.css
+++ b/styles.css
@@ -254,7 +254,7 @@ body {
 }
 
 .product-box p {
-  margin-top: 10px;
+  margin-top: 30px;
   font-weight: bold;
   color: rgb(255, 255, 255);
 }
@@ -263,10 +263,12 @@ body {
   margin-top: 10px;
   font-weight: bold;
   color: rgb(255, 255, 255);
-  border: 2px solid #ea0707;
+  border: 0px solid #ea0707;
   box-shadow: 0 6px 12px rgba(0, 0, 0, 0.1);
   border-radius: 5px;
   padding: 5px 25px;
+  font-size: 1.4rem;
+  background-color: rgba(236, 33, 33, 0.2);
 }
 
 /* Thank You Section */
